added confetti package

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
 html {
   box-sizing: border-box;
 }
-*, *::before, *::after {
+
+*,
+*::before,
+*::after {
   box-sizing: inherit;
 }
 
@@ -27,7 +30,7 @@ body {
 
 h1 {
   font-size: 3rem;
-  text-shadow: 0 2px 3px rgba(0, 0, 0, 0.3);  
+  text-shadow: 0 2px 3px rgba(0, 0, 0, 0.3);
   margin-bottom: 2rem;
   text-align: center;
   font-weight: bold;
@@ -39,7 +42,7 @@ a {
 }
 
 
-body > * {
+body>* {
   grid-row: 1;
   grid-column: 1;
 }
@@ -72,7 +75,9 @@ form {
   }
 }
 
-@media screen and (min-width: 250px) and (min-resolution: 2dppx){  /* x2 and one step up */
+@media screen and (min-width: 250px) and (min-resolution: 2dppx) {
+
+  /* x2 and one step up */
   body {
     background-image: url("../assets/img/ph-750.jpeg");
   }
@@ -99,7 +104,7 @@ form {
   }
 }
 
-@media screen and (min-width: 750px)  and (min-resolution: 2dppx){
+@media screen and (min-width: 750px) and (min-resolution: 2dppx) {
   body {
     background-image: url("../assets/img/ph-2000.jpeg");
   }
@@ -112,7 +117,7 @@ form {
   }
 }
 
-@media screen and (min-width: 1000px) and (min-resolution: 2dppx){
+@media screen and (min-width: 1000px) and (min-resolution: 2dppx) {
   body {
     background-image: url("../assets/img/ph-2500.jpeg");
   }
@@ -126,7 +131,9 @@ form {
   }
 }
 
-@media screen and (min-width: 1500px) and (min-resolution: 2dppx){ /* we have to stop somewhere...*/
+@media screen and (min-width: 1500px) and (min-resolution: 2dppx) {
+
+  /* we have to stop somewhere...*/
   body {
     background-image: url("../assets/img/ph-2500.jpeg");
   }
