--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url(../css/reset.css);
+
 html {
   box-sizing: border-box;
 }
@@ -145,3 +147,4 @@ form {
     background-image: url("../assets/img/ph-2500.jpeg");
   }
 }
+
